[package]
name = "tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cosmwasm-std.workspace = true
cw-orch = { workspace = true, features = ["eth"] }
cw20-base = { workspace = true }
injective-std.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
cosmos-sdk-proto = { workspace = true }
staking = { workspace = true, features = ["interface"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
