[package]
name = "scw20"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std.workspace = true
cw-orch = { workspace = true, optional = true }
cw2.workspace = true
thiserror = "1.0.51"
cw20-base = { workspace = true }
cw-utils.workspace = true
cw-storage-plus.workspace = true
